spacing fixes

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -108,13 +108,13 @@ header {
     background-color: #cfedfd;
 }
 header h1 {
-    padding: 0vw 1vw;
-    margin: 1vw;
+    padding: 0px 10px;
+    margin: 10px;
     border-left: 4px solid #011f4b;
     text-align: left;
 }
 header p:nth-child(2) {
-    padding: 0vh 1vw 1.5vh 1vw;
+    padding: 0px 10px 6px 10px;
     font-weight: 500;
     font-size: 20px;
 }
@@ -127,18 +127,18 @@ header p {
     width: 100%;
 }
 #mail-logo { 
-    margin: 0vh 0.5vw;
-    padding-top: 8%;
+    margin: 0px 6px;
+    padding-top: 8px;
     width: 50px;
 }
 #github-logo {
-    margin: 0vh 0.5vw;
-    padding-top: 2%;
+    margin: 0px 6px;
+    padding-top: 6px;
     width: 50px;
 }
 #linkedin-logo {
-    margin: 0vh 0.5vw;
-    padding-top: 3%;
+    margin: 0px 6px;
+    padding-top: 6px;
     width: 50px;
 }
 #de1-soc-img {
@@ -397,11 +397,11 @@ figcaption {
     opacity: 0;
 }
 #hobbies li p {
-    margin: 20px 20px;
+    margin: 20px 18px;
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s 0.45s, opacity 0.6s linear;
-    overflow: hidden;
+    font-size: 75%;
 }
 #hobbies li:hover div {
     transform: scale(105%);
